Pinning the version of Vue to 3.5.21 because of bugs encountered in later releases

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <link href="https://cdn.jsdelivr.org/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet" rel="preload">
 
     <!-- Keep the order, vue should be the first -->
-    <script src="https://cdn.jsdelivr.org/npm/vue/dist/vue.global.prod.min.js"></script>
+    <script src="https://cdn.jsdelivr.org/npm/vue@3.5.21/dist/vue.global.prod.min.js"></script>
 
     <!-- Vuetify -->
     <script src="https://cdn.jsdelivr.org/npm/vuetify/dist/vuetify.js"></script>
